*7258* Less temporary fix for layout bug

--- a/styles/compiled.css
+++ b/styles/compiled.css
@@ -603,6 +603,10 @@ body {
   *display:block;
   width:auto;
 }
+.pkp_structure_nosidebar {
+  padding-top:10px;
+  margin-right:20px;
+}
 .pkp_structure_sidebar {
   padding-top:10px;
   border-top:1px dotted #999999;
